Closed
Bug 201822
Opened 22 years ago
Closed 22 years ago
Crash when using backspace key to go back - Trunk [@ nsDocShell::QueryInterface] [@ nsDocShell::AddRef]
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jason.barnabe, Assigned: bryner)
References
Details
(Keywords: crash, testcase, topcrash+)
Crash Data
Attachments
(3 files)
7.33 KB,
text/plain
|
Details | |
714 bytes,
patch
|
pavlov
:
review+
sfraser_bugs
:
superreview+
|
Details | Diff | Splinter Review |
829 bytes,
patch
|
jag+mozilla
:
review+
jag+mozilla
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030412
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030412
Pressing backspace to return to the previous document crashes Mozilla. This is a
new bug in 2003041208.
Reproducible: Always
Steps to Reproduce:
Comment 1•22 years ago
|
||
Comfirmed with 2003041208-trunk/Win-Me.
Comment 2•22 years ago
|
||
can you post Talkback ID for this crash "mozilla/bin/components/talkback.exe" ?
Keywords: crash,
stackwanted
Reporter | ||
Comment 3•22 years ago
|
||
Talkback ID TB19109852M
It happens on my environment, too.
(2003041204,trunk,zip,w/o talkback),w2k
Comment 5•22 years ago
|
||
confirming based on OS/2 bug as well.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•22 years ago
|
||
*** Bug 201838 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 7•22 years ago
|
||
I've got a fix. It's a regression from sfraser's checkin for bug 201560.
Assignee: aaronl → bryner
Assignee | ||
Comment 8•22 years ago
|
||
Assignee | ||
Comment 9•22 years ago
|
||
infinite recursion is bad.
Updated•22 years ago
|
Attachment #120420 -
Flags: review+
Assignee | ||
Updated•22 years ago
|
Attachment #120420 -
Flags: superreview?(sfraser)
Assignee | ||
Updated•22 years ago
|
Keywords: stackwanted
Comment 10•22 years ago
|
||
Comment on attachment 120420 [details] [diff] [review]
fix
D'oh! Thanks bryner. Shouldn't this be a smoketest blocker?
Attachment #120420 -
Flags: superreview?(sfraser) → superreview+
Comment 11•22 years ago
|
||
Thanks for fixing this, bryner. JJ let me check it in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 12•22 years ago
|
||
*** Bug 201942 has been marked as a duplicate of this bug. ***
Comment 13•22 years ago
|
||
*** Bug 202017 has been marked as a duplicate of this bug. ***
Comment 14•22 years ago
|
||
Adding topcrash info for future reference.
Comment 15•22 years ago
|
||
*** Bug 202027 has been marked as a duplicate of this bug. ***
Comment 16•22 years ago
|
||
I'm not sure that this issue is really fixed. I just downloaded build 2003041412
and pressing BACKSPACE now does nothing. Sure the browser no longer crashes, but
now the backspace functionality is broken.
Reporter | ||
Comment 17•22 years ago
|
||
Still crashing for me with 2003041416. TB19158809M
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 18•22 years ago
|
||
It's also crashing for me too. Browser: Build 2003041416 on Windows 2000
Professional (5.0.2195 Service Pack 3).
Talkback Crash Reports:
TB19159284Z
TB19159259G
Assignee | ||
Comment 19•22 years ago
|
||
That build must not have gotten this checkin somehow. The stack signature is
the same which isn't really possible given the checkin. I'm fairly confident
that tomorrow's AM build won't crash.
Comment 20•22 years ago
|
||
No crash for me now, but the backspace-functionality is broken. If I press the
backspace-button, nothing happens for me.
User-Agent is Mozilla/5.0 (Windows; U; Windows NT 5.0; de-AT; rv:1.4b)
Gecko/20030415
Comment 21•22 years ago
|
||
Well, I've just found out, that the backspace is now working the other way
around. Instead of going back, it goes forward, when I'm pressing the
backspace-button.
Comment 22•22 years ago
|
||
Comment 23•22 years ago
|
||
With 2003041508-trunk/Win-Me, crash when Backspace key problem has been resolved.
However, shortcut on Backspace seems to be miss-assigned, Backspace=Forward,
Shift-Backspace=Back.
Should we open another bug?
Comment 24•22 years ago
|
||
WADA, please read comment #21 and comment #22
Comment 25•22 years ago
|
||
I misunderstood "Fix back and forward reversal" of comment #22 was already
checked in.
Sorry for my hasty conclusion and SPAM.
Comment 26•22 years ago
|
||
Comment on attachment 120588 [details] [diff] [review]
Fix back and forward reversal
r=/sr=jag
Attachment #120588 -
Flags: superreview+
Attachment #120588 -
Flags: review+
Reporter | ||
Comment 27•22 years ago
|
||
Well, WFM now with 2003041604 WinXP. Thanks.
Comment 28•22 years ago
|
||
resolving
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
Comment 29•22 years ago
|
||
vrfy'd fixed with 2003.04.16.09 comm build on win2k. Backspace goes back,
Shift+Backspace goes fwd a page.
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ nsDocShell::QueryInterface]
[@ nsDocShell::AddRef]
Updated•6 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•