Fix for bug 201822 -- recursion crash when using backspace key to go Back. patch by bryner, r=pavlov, sr=me. a=jj for checkin.